feat: operate outside of root hostname

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"title": "T H I C K ideas",
-	"subtitle": "Essays, etc.",
-	"links_title": "Related places:",
+	"title": "T H I C K",
+	"subtitle": "Ideas, Essays, etc.",
+	"linksTitle": "Related places:",
 	"links": {
 		"THICK apps": "https://beakerbrowser.com/docs/inside-beaker/thick-applications.html",
 		"Beaker": "https://beakerbrowser.com/",
