--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"title": "T H I C K",
+	"title": "THICK blog",
 	"subtitle": "Ideas, Essays, etc.",
 	"linksTitle": "Related places:",
 	"links": {
