--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
   - node_modules
 script:
-- npm run build
+- npm test
 - npm run new-entry -- hello
 - npm run new-entry
 - npm run clean
